[tool.poetry]
name = "cache"
version = "0.1.0"
description = ""
authors = ["Dmitriy Morozov <dmitriy@mrzv.org>"]

[tool.poetry.dependencies]
python = "^3.7"
joblib = "^0.14.1"
atomicwrites = "^1.3"
numpy = "^1.17"
decorator = "^4.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
