[tool.poetry]
name = "cache"
version = "0.1.0"
description = ""
authors = ["Dmitriy Morozov <dmitriy@mrzv.org>"]

[tool.poetry.dependencies]
python = "^3.8"
joblib = "*"
atomicwrites = "*"
numpy = "*"
decorator = "*"
dill = "^0.3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12","setuptools"]
build-backend = "poetry.masonry.api"
